vpn-gateway/config/firewall/iptables.rules
# Generated by iptables-save v1.4.21 on Fri Nov 22 15:52:17 2019
*nat
:PREROUTING ACCEPT [559:33748]
:INPUT ACCEPT [3:252]
:OUTPUT ACCEPT [303:23144]
:POSTROUTING ACCEPT [300:22964]
:MAYBE_DNAT - [0:0]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A PREROUTING -d CT_PUBLIC_IP/32 -p tcp -m tcp --dport 30000:30002 -j MAYBE_DNAT
-A PREROUTING -d CT_PUBLIC_IP/32 -p tcp -m multiport --dports 80,443,4648,4848,4901:4910,4949,7979,8080,8686,8443,10000:19999 -j DNAT --to-destination RESOLVER1_PRIVATE_IP-RESOLVER2_PRIVATE_IP --persistent
-A PREROUTING -d CT_PUBLIC_IP/32 -p udp -m multiport --dports 10000:19999 -j DNAT --to-destination RESOLVER1_PRIVATE_IP-RESOLVER2_PRIVATE_IP --persistent
-A POSTROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A POSTROUTING -o tun+ -j MASQUERADE
# -A MAYBE_DNAT -p tcp -m tcp --dport 30000 -m comment --comment "infra1" -j DNAT --to-destination 10.20.31.5:22
# -A MAYBE_DNAT -p tcp -m tcp --dport 30001 -m comment --comment "hn01" -j DNAT --to-destination 10.20.31.6:22
# -A MAYBE_DNAT -p tcp -m tcp --dport 30002 -m comment --comment "hn02" -j DNAT --to-destination 10.20.31.7:22
COMMIT
# Completed on Fri Nov 22 15:52:17 2019
# Generated by iptables-save v1.4.21 on Fri Nov 22 15:52:17 2019
*filter
:INPUT DROP [935:54596]
:FORWARD DROP [109:6540]
:OUTPUT ACCEPT [267204:25139287]
:INTRA_SERVICES - [0:0]
:LAN_SERVICES - [0:0]
-A INPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m conntrack --ctstate RELATED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -d CT_PRIVATE_IP/32 -i venet0 -j LAN_SERVICES
-A INPUT -d CT_PUBLIC_IP/32 -i venet0 -j INTRA_SERVICES
-A FORWARD -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -p icmp -m conntrack --ctstate RELATED -j ACCEPT
-A FORWARD -o tun+ -m conntrack --ctorigdst CT_PUBLIC_IP -m set --match-set INTRA_TRUSTED src -j ACCEPT
-A LAN_SERVICES -p tcp -m tcp --dport 22 -m set --match-set JELCORE src -j ACCEPT
COMMIT
# Completed on Fri Nov 22 15:52:17 2019
# Generated by iptables-save v1.4.21 on Fri Nov 22 15:52:17 2019
*mangle
:PREROUTING ACCEPT [467784:222709253]
:INPUT ACCEPT [285134:117818550]
:FORWARD ACCEPT [182650:104890703]
:OUTPUT ACCEPT [267204:25139287]
:POSTROUTING ACCEPT [449745:130023450]
COMMIT
# Completed on Fri Nov 22 15:52:17 2019
# Generated by iptables-save v1.4.21 on Fri Nov 22 15:52:17 2019
*raw
:PREROUTING ACCEPT [467784:222709253]
:OUTPUT ACCEPT [267204:25139287]
COMMIT
# Completed on Fri Nov 22 15:52:17 2019
